--- a/pipeline/scss/layout/_site-footer.scss
+++ b/pipeline/scss/layout/_site-footer.scss
@@ -1,10 +1,15 @@
 #site-footer {
+  transition:transform .3s ease-in-out;
   background-color: $site-footer-bg-color;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: auto;
   padding-bottom: 1em;
+  &.navigation-open {
+    transition:transform .3s ease-in-out;
+    transform: translateX($site-navigation-width);
+  }
   @include MQ(M) {
     flex-direction: row;
   }
